<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nirmit.spyfall.MainActivity"
    android:background="#011c1e">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/title"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/title"/>

    <ImageButton
        android:layout_width="330dp"
        android:layout_height="320dp"
        android:id="@+id/playBtn"
        android:src="@drawable/logo2"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/nZlogo"
        android:src="@drawable/web_logo"
        android:scaleType="fitCenter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#a09fba"
        android:contentDescription="@string/webLogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_alignTop="@+id/nZlogo"
        android:layout_alignBottom="@+id/nZlogo"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/nZlogo"
        android:gravity="center"
        android:textColor="#000000"
        android:background="#819da1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="#f7a68e8d"
        android:layout_below="@+id/playBtn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
